# PythonProjectBoilerPlateV2

./: .env  .gitignore  README.md  Readme.md  conda_environment.yml  demo_run.py  pyproject.toml
notebooks/: init_eda.py  kedro_pipeline.py
src/etl/: __init__.py
src/etl/bronze/: __init__.py  country.py  email.py  firstname.py  lastname.py
src/etl/core/: base.py  ordering.py  registry.py  reporting.py  validation.py
src/etl/silver/: __init__.py  country.py  email.py  first_name.py  full_name.py  last_name.py
src/package_name/: main.py
