[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "package_name"
readme = "README.md"
dynamic = [ "version",]
dependencies = [  ]

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "package_name.__version__"

[tool.black]
line-length = 100
include = '^src/.*\.pyi?$'

[tool.ruff]
line-length = 100
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]
exclude = ["notebooks/"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src"]
